--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     gateway:
       routes:
         - id: cloud_authority
-          uri: lb://cloud_authority
+          uri: lb://cloudAuthority
           predicates:
             - Path=/user/**
 
