用户登录返回token

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
          <module>gateway</module>
         <module>authority</module>
+        <module>common</module>
     </modules>
 
     <properties>
