--- a/authority/pom.xml
+++ b/authority/pom.xml
@@ -43,7 +43,23 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
-
+<!--    以下配置为构建一个可运行的jar包，多模块项目需要配置才能启动jar包-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.7.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
